Continue working on page.  Need to fix so that all page numbers are visible

--- a/BookLibraryApp/wwwroot/css/booklibrarystyle.css
+++ b/BookLibraryApp/wwwroot/css/booklibrarystyle.css
@@ -8,3 +8,7 @@
     visibility: visible;
     display: flex;
 }
+
+.card-img-top {
+    content: "No Image"
+}
